# Homework12

./: .gitignore  CMakeLists.txt  Makefile  README.md  mapper.cpp  output  reducer.cpp  run_locally.sh  stats.cpp  stats.hpp
.github/workflows/: ci.yml
tests/: gtestlite.hpp  test_stats.cpp
